--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,10 +1,10 @@
-FROM coinclone/coinclone:node
+FROM coinclone/bitcoin:node
 
 WORKDIR /root/
 
 RUN rm /root/run.sh
 
-COPY config/coin.conf /root/.coin/
+COPY config/coin.conf /root/.bitcoin/
 COPY config/run.sh /root/
 
 CMD ["bash", "/root/run.sh"]
